[gd_scene load_steps=9 format=3 uid="uid://o2wwrspgry8k"]

[ext_resource type="Script" uid="uid://b4yf8adl2pnx4" path="res://Scripts/detenu_control.gd" id="1_132v8"]
[ext_resource type="Script" uid="uid://ypp8m7378wvl" path="res://Scripts/cop_control.gd" id="1_ku55n"]

[sub_resource type="PlaneMesh" id="PlaneMesh_qmtr8"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_132v8"]
albedo_color = Color(0.720302, 0.650415, 3.85046e-07, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ku55n"]
material = SubResource("StandardMaterial3D_132v8")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_132v8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p2nmu"]
albedo_color = Color(0.0942883, 0.709762, 0.73838, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0yq5w"]
material = SubResource("StandardMaterial3D_p2nmu")

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.779797, 0.626032, 0, -0.626032, 0.779797, 0, 6.7596, 12.3796)

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_qmtr8")

[node name="Detenu" type="CharacterBody3D" parent="."]
script = ExtResource("1_132v8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Detenu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_ku55n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detenu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_132v8")

[node name="Cop" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.91762, 0, 0)
script = ExtResource("1_ku55n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_132v8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_0yq5w")

[connection signal="input_event" from="Detenu" to="Detenu" method="_on_input_event"]
[connection signal="mouse_entered" from="Detenu" to="Detenu" method="on_hover"]
[connection signal="mouse_exited" from="Detenu" to="Detenu" method="on_unhover"]
